Tue Oct 28 10:27:03 1997  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c	(RCS_deltas): Don't use \? in string if __STDC__ is not
	defined.

	* rcs.c (make_file_label): Remove extraneous `+'.

Mon Oct 27 14:40:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* status.c (status): Don't pass SEND_NO_CONTENTS to send_files.

Sat Oct 25 00:33:57 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_delete_revs): Use : not - for range in error message.

	* rcs.h: Add comment about '\0' in RCS fields.

	* rcs.c (getdelta): Add comment about branches and next field
	being mandatory.

	* rcs.c (RCS_reparsercsfile, RCS_deltas), sanity.sh (reserved):
	Reindent sections which were misindented as a result of recent
	changes.

Fri Oct 24 10:22:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_findlock_or_tip): Don't worry about file ownership
	and nonstrict locking when returning the default branch or head.
	The most conspicuous problem with the old code is that in the
	error case it would examine rstat.st_uid when it had not been
	set.  For a discussion of more fundamental reasons, see comment.

	* admin.c (admin_fileproc): In handling -A, don't handle relative
	pathnames differently from absolute pathnames.  See comment for
	rationale.  If problem opening the file, give a nice error not a
	coredump.
	* sanity.sh (admin-19a-admin, admin-19a-log, admin-19a-fix):
	New tests, test for traditional "cvs admin -A" behavior with
	relative pathnames.
	* sanity.sh (admin-19a-nonexist): Test for the core dump fix.
	* sanity.sh (admin-22-o1): Look for ${PROG} not cvs.

	* sanity.sh (reserved-16): Remove commitinfo change with "cvs
	commit" not "cvs admin -o".  In addition to commit being The Right
	Thing on general principles, cvs admin -o doesn't work because it
	doesn't rebuild the administrative file database.

	* update.c (patch_file): If the first revision does not exist in
	the RCS file, fall back to sending entire file.  Fixes